build_logs/slice_decompose_identity.log
crates\graph-tree\src\tree.rs:228:13: warning: unused import: `crate::layout::SplitBoundary`
crates\graph-tree\src\tree.rs:291:13: warning: unused import: `crate::layout::SplitBoundary`
warning: `graph-tree` (lib) generated 2 warnings (run `cargo fix --lib -p graph-tree` to apply 2 suggestions)
warning: unused import: `HashSet`
  --> crates\graph-canvas\src\layout\static_layouts.rs:19:33
   |
19 | use std::collections::{HashMap, HashSet, VecDeque};
   |                                 ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `graph-canvas` (lib) generated 1 warning (run `cargo fix --lib -p graph-canvas` to apply 1 suggestion)
    Checking graphshell-core v0.0.1 (C:\Users\mark_\Code\repos\graphshell\crates\graphshell-core)
warning: unexpected `cfg` condition value: `egui-host`
   --> crates\registrar\register-input\src\lib.rs:106:11
    |
106 |     #[cfg(feature = "egui-host")]
    |           ^^^^^^^^^^^^^^^^^^^^^ help: remove the condition
    |
    = note: no expected values for `feature`
    = help: consider adding `egui-host` as a feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: `#[warn(unexpected_cfgs)]` on by default

warning: unexpected `cfg` condition value: `egui-host`
   --> crates\registrar\register-input\src\lib.rs:323:11
    |
323 |     #[cfg(feature = "egui-host")]
    |           ^^^^^^^^^^^^^^^^^^^^^ help: remove the condition
    |
    = note: no expected values for `feature`
    = help: consider adding `egui-host` as a feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration

warning: `register-input` (lib) generated 2 warnings
warning: unused imports: `EdgeIndex` and `NodeIndex`
  --> crates\graphshell-core\src\graph\mod.rs:20:30
   |
20 | use petgraph::stable_graph::{EdgeIndex, NodeIndex, StableGraph};
   |                              ^^^^^^^^^  ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `resolve` found for array `[u8; 16]` in the current scope
   --> crates\graphshell-core\src\graph\identity.rs:87:15
    |
 87 |         bytes.resolve(resolver, out);
    |               ^^^^^^^ method not found in `[u8; 16]`
    |
   ::: C:\Users\mark_\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rkyv-0.8.15\src\traits.rs:244:8
    |
244 |     fn resolve(&self, resolver: Self::Resolver, out: Place<Self::Archived>);
    |        ------- the method is available for `[u8; 16]` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Archive` which provides `resolve` is implemented but not in scope; perhaps you want to import it
    |
 20 + use rkyv::Archive;
    |

error[E0599]: no method named `resolve` found for tuple `(f32, f32)` in the current scope
   --> crates\graphshell-core\src\graph\identity.rs:124:15
    |
124 |         value.resolve(resolver, out);
    |               ^^^^^^^ method not found in `(f32, f32)`
    |
   ::: C:\Users\mark_\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rkyv-0.8.15\src\traits.rs:244:8
    |
244 |     fn resolve(&self, resolver: Self::Resolver, out: Place<Self::Archived>);
    |        ------- the method is available for `(f32, f32)` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Archive` which provides `resolve` is implemented but not in scope; perhaps you want to import it
    |
 20 + use rkyv::Archive;
    |

error[E0599]: no method named `resolve` found for tuple `(f32, f32)` in the current scope
   --> crates\graphshell-core\src\graph\identity.rs:164:15
    |
164 |         value.resolve(resolver, out);
    |               ^^^^^^^ method not found in `(f32, f32)`
    |
   ::: C:\Users\mark_\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rkyv-0.8.15\src\traits.rs:244:8
    |
244 |     fn resolve(&self, resolver: Self::Resolver, out: Place<Self::Archived>);
    |        ------- the method is available for `(f32, f32)` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Archive` which provides `resolve` is implemented but not in scope; perhaps you want to import it
    |
 20 + use rkyv::Archive;
    |

warning: unused import: `SerializeWith`
  --> crates\graphshell-core\src\graph\mod.rs:27:42
   |
27 |     with::{ArchiveWith, DeserializeWith, SerializeWith},
   |                                          ^^^^^^^^^^^^^

warning: unused import: `ArchiveWith`
  --> crates\graphshell-core\src\graph\mod.rs:27:12
   |
27 |     with::{ArchiveWith, DeserializeWith, SerializeWith},
   |            ^^^^^^^^^^^

warning: unused import: `DeserializeWith`
  --> crates\graphshell-core\src\graph\mod.rs:27:25
   |
27 |     with::{ArchiveWith, DeserializeWith, SerializeWith},
   |                         ^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `graphshell-core` (lib) generated 4 warnings
error: could not compile `graphshell-core` (lib) due to 3 previous errors; 4 warnings emitted
